<resources>
    <string name="app_name">MotoRent</string>
    <string name="title_activity_maps">Map</string>
    <string name="web_client_id">657403564853-b9ptfip8htece81dpttceh1slf9hp9di.apps.googleusercontent.com</string>
    <string name="fail_google_auth">Google sign in failed</string>
    <string name="fail_auth">Authentication Failed</string>
    <string name="ok_auth">Authenticated</string>
    <string name="welcome">Welcome</string>
    <string name="ask_name">Enter your name</string>
    <string name="example_user">Nickname here</string>
    <string name="go">GO</string>
    <string name="user_name_exist">User name already exist</string>
    <string name="bad_user_name">Bad username</string>
    <string name="user_created">User created</string>
    <string name="fail_create_user">User cannot be created at this moment</string>
    <string name="imp_create_user">Impossible to create this user</string>
    <string name="loading_content">Loading</string>
    <string name="signin">Sign In</string>
    <string name="nom_d_usuari">Nom d\'usuari:</string>
    <string name="username">Username</string>
    <string name="contrasenya">Contrasenya:</string>
    <string name="password">Password</string>
    <string name="iniciar_sessi">Iniciar Sessió</string>
    <string name="o_registrar_se_v_a_mail">o registrar-se vía mail</string>
    <string name="registrar_amb">Registrar amb</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="recuperar_contrasenya">Recuperar contrasenya</string>
    <string name="facebook_app_id">1088984701532674</string>
    <string name="fb_login_protocol_scheme">fb1088984701532674</string>

</resources>
