<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.view.WelcomeActivity" android:orientation="vertical" android:padding="20dp"
    android:background="@color/colorBlack" android:id="@+id/root">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/welcome_tv" android:gravity="center_horizontal"
        android:textSize="35dp" style="@style/cts_motorent"
        android:layout_marginTop="30dp" android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal" android:textColor="@color/colorWelcomeText"/>
    <TextView
        android:layout_height="wrap_content" android:id="@+id/usermail_tv" tools:text="EXAMPLEUSER"
        style="@style/cts_motorent" android:textSize="30dp" android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content" android:textAlignment="center" android:layout_marginBottom="30dp"
        android:textColor="@color/colorWelcomeText"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="130dp" app:srcCompat="@drawable/moto_toast"
        android:id="@+id/logo_img"
        android:contentDescription="@string/app_name" android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal" android:layout_marginBottom="25dp"/>

    <TextView
        android:id="@+id/ask_name_tv"
        style="@style/cts_motorent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ask_name"
        android:textColor="@color/colorWelcomeName"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/input_name_et"
        tools:ignore="Autofill" android:hint="@string/example_user"
        style="@style/ET_Color_Welcome" android:maxLength="15" android:layout_marginBottom="30dp"/>
    <ImageButton
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_height="80dp" app:srcCompat="@drawable/moto_toast"
        android:id="@+id/setname_btn"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/go" android:layout_width="90dp"
        android:adjustViewBounds="true" android:cropToPadding="true"/>
</LinearLayout>